Changelog
=========

1.0b6 - unreleased
------------------

* Fixed plugin initialization when applying a theme.
  [maurits]

* Query the resource directory using the 'currentTheme' name instead
  of the Theme object (updating the control panel was broken).
  [maurits]

* Fix zip import (plugin initialization was broken.)
  [elro]

1.0b5 - 2011-05-29
------------------

* Make sure the control panel is never themed, by setting the X-Theme-Disabled
  response header.
  [optilude]

* Add support for registering new views from Zope Page Templates and 
  overriding existing templates. See README for more details.
  [optilude]

1.0b4 - 2011-05-24
------------------

* Add support for ``X-Theme-Disabled`` response header.
  [elro]

* Make "Replace existing theme" checkbox default to off.
  [elro]

* Fix control panel to correctly display a newly uploaded theme.
  [elro]

* Fix zip import to work correctly when no manifest is supplied.
  [elro]

1.0b3 - 2011-05-23
------------------

* Show theme name along with title in control panel.
  [elro]

1.0b2 - 2011-05-16
------------------

* Encode internally resolved documents to support non-ascii characters
  correctly.
  [elro]

* Fix control panel to use theme name not id.
  [optilude]

1.0b1 - 2011-04-22
------------------

* Wrap internal subrequests for css or js in style or script tags to
  facilitate inline includes.
  [elro]

* Add ``theme.xml`` import step (see README).
  [optilude]

* Add support for ``[theme:parameters]`` section in ``manifest.cfg``, which
  can be used to set parameters and the corresponding TALES expressions to
  calculate them.
  [optilude]

* Add support for parameter expressions based on TALES expressions
  [optilude]

* Use plone.subrequest 1.6 features to work with IStreamIterator from
  plone.resource.
  [elro]

* Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

* Added support for uploading themes as Zip archives.
  [optilude]
